--- a/static/styles.css
+++ b/static/styles.css
@@ -1,7 +1,7 @@
  
 
 body {
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Satoshi', sans-serif;
     background-color: #2E4374;
     margin: 0;
     padding: 0;
@@ -14,11 +14,12 @@ h2 {
 
 .container {
     max-width: 1200px;
-    margin: 50px auto;
+    margin: 130px 0px 0px 280px; 
     background-color: #f4f4f4;
-    padding: 20px;
+    /* padding: 20px; */
     border-radius: 5px;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+    padding: 10px 75px 20px 25px;
 }
 
 .row {
